# sven

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  release.toml
crates/sven-acp/: Cargo.toml
crates/sven-acp/src/: agent.rs  bridge.rs  lib.rs  node_proxy.rs
crates/sven-acp/tests/: integration.rs
crates/sven-bootstrap/: Cargo.toml
crates/sven-bootstrap/src/: agent.rs  context.rs  context_query.rs  context_tool.rs  lib.rs  registry.rs  task_tool.rs
crates/sven-channels/: Cargo.toml
crates/sven-channels/src/: channel.rs  lib.rs  manager.rs  tool.rs
crates/sven-channels/src/channels/: discord.rs  irc.rs  matrix.rs  mod.rs  signal.rs  telegram.rs  whatsapp.rs
crates/sven-ci/: Cargo.toml
crates/sven-ci/src/: context.rs  conversation.rs  index.rs  jsonl_export.rs  lib.rs  output.rs  pipe.rs  runner.rs  template.rs  tests.rs  toolcall_replay.rs
crates/sven-ci/src/runner/: event.rs  helpers.rs  mod.rs
crates/sven-config/: Cargo.toml
crates/sven-config/src/: lib.rs  loader.rs  schema.rs
crates/sven-core/: Cargo.toml
crates/sven-core/src/: agent.rs  compact.rs  events.rs  lib.rs  prompts.rs  runtime_context.rs  session.rs  task_tool.rs  tests.rs  tool_slots.rs
crates/sven-frontend/: Cargo.toml
crates/sven-frontend/src/: agent.rs  lib.rs  markdown.rs  node_agent.rs  queue.rs  segment.rs  tool_view.rs  types.rs
crates/sven-frontend/src/commands/: completion.rs  mcp.rs  mod.rs  parser.rs  registry.rs  skill.rs
crates/sven-gui/: Cargo.toml  build.rs
crates/sven-gui/src/: bridge.rs  clipboard.rs  highlight.rs  inspector.rs  lib.rs  markdown.rs  models.rs  plain_msg.rs  queue_ops.rs  search.rs  sessions.rs
crates/sven-gui/ui/: chat-pane.slint  completion-popup.slint  help-overlay.slint  input-pane.slint  inspector.slint  main-window.slint  pager.slint  picker-popup.slint  question-modal.slint  queue-panel.slint  search-bar.slint  sidebar.slint  status-bar.slint  team-picker.slint  theme.slint  toast.slint  widgets.slint
crates/sven-image/: Cargo.toml
crates/sven-image/src/: error.rs  lib.rs
crates/sven-input/: Cargo.toml
crates/sven-input/src/: chat_document.rs  conversation.rs  frontmatter.rs  history.rs  lib.rs  markdown.rs  queue.rs
crates/sven-integrations/: Cargo.toml
crates/sven-integrations/src/: lib.rs
crates/sven-integrations/src/calendar/: caldav.rs  google.rs  mod.rs  tool.rs  types.rs
crates/sven-integrations/src/email/: gmail.rs  imap.rs  mod.rs  tool.rs  types.rs
crates/sven-integrations/src/voice/: elevenlabs.rs  mod.rs  openai_stt.rs  tool.rs  twilio.rs  types.rs
crates/sven-mcp/: Cargo.toml
crates/sven-mcp-client/: Cargo.toml
crates/sven-mcp-client/src/: bridge.rs  client.rs  health.rs  lib.rs  manager.rs  oauth.rs  protocol.rs  transport.rs
crates/sven-mcp/src/: bridge.rs  lib.rs  node_proxy.rs  registry.rs  server.rs
crates/sven-mcp/tests/: integration.rs
crates/sven-memory/: Cargo.toml
crates/sven-memory/src/: lib.rs  sqlite.rs  store.rs  tool.rs
crates/sven-model/: Cargo.toml  DRIVERS.md  models.yaml
crates/sven-model/src/: anthropic.rs  aws.rs  catalog.rs  cohere.rs  google.rs  lib.rs  mock.rs  openai.rs  openai_compat.rs  provider.rs  registry.rs  sanitize.rs  types.rs  yaml_mock.rs
crates/sven-model/src/openai_compat/: mod.rs  request.rs  stream.rs
crates/sven-model/tests/: all_drivers_mock.rs  driver_tests.rs  wire_format_tests.rs
crates/sven-node/: Cargo.toml
crates/sven-node-client/: Cargo.toml
crates/sven-node-client/src/: lib.rs
crates/sven-node/src/: agent_builder.rs  config.rs  error.rs  lib.rs  node.rs  peer.rs  telegram.rs  tools.rs
crates/sven-node/src/control/: mod.rs  protocol.rs  service.rs
crates/sven-node/src/crypto/: mod.rs  token.rs
crates/sven-node/src/http/: auth.rs  hooks.rs  mod.rs  security.rs  slack.rs  tls.rs  ws.rs
crates/sven-node/src/p2p/: auth.rs  handler.rs  mod.rs  pairing.rs
crates/sven-node/src/web/: mod.rs  ws.rs
crates/sven-p2p/: Cargo.toml
crates/sven-p2p/src/: behaviour.rs  config.rs  error.rs  lib.rs  log_layer.rs  node.rs  relay.rs  store.rs  transport.rs
crates/sven-p2p/src/discovery/: git.rs  memory.rs  mod.rs
crates/sven-p2p/src/protocol/: codec.rs  mod.rs  types.rs
crates/sven-p2p/tests/: codec_tests.rs  discovery_tests.rs  peer_tests.rs
crates/sven-runtime/: Cargo.toml
crates/sven-runtime/src/: agents.rs  ci.rs  display.rs  git.rs  knowledge.rs  lib.rs  project.rs  shared.rs  skills.rs
crates/sven-scheduler/: Cargo.toml
crates/sven-scheduler/src/: heartbeat.rs  job.rs  lib.rs  scheduler.rs  store.rs  tool.rs
crates/sven-team/: Cargo.toml
crates/sven-team/src/: cli.rs  config.rs  definition.rs  lib.rs  prompts.rs  spawn.rs  task.rs  tools.rs  worktree.rs
crates/sven-tools/: Cargo.toml
crates/sven-tools/src/: display.rs  events.rs  lib.rs  params.rs  policy.rs  registry.rs  tool.rs  tool_summary.rs
crates/sven-tools/src/builtin/: apply_patch.rs  ask_question.rs  delete_file.rs  edit_file.rs  find_file.rs  fs.rs  glob.rs  glob_file_search.rs  grep.rs  grep_match.rs  list_dir.rs  list_knowledge.rs  load_skill.rs  mod.rs  read_file.rs  read_image.rs  read_lints.rs  run_terminal_command.rs  search_codebase.rs  search_knowledge.rs  shell.rs  switch_mode.rs  todo_write.rs  update_memory.rs  web_fetch.rs  web_search.rs  write.rs  write_file.rs
crates/sven-tools/tests/: context_integration.rs  gdb_integration.rs
crates/sven-tui/: Cargo.toml
crates/sven-tui/src/: agent.rs  app.rs  input.rs  input_wrap.rs  keys.rs  layout.rs  lib.rs  markdown.rs  node_agent.rs  nvim_bridge.rs  pager.rs  submit.rs  widgets.rs
crates/sven-tui/src/app/: agent_conn.rs  agent_events.rs  chat_ops.rs  chat_state.rs  dispatch.rs  file_watcher.rs  hit_test.rs  input_state.rs  layout_cache.rs  mod.rs  nvim_state.rs  queue_state.rs  session_manager.rs  term_events.rs  ui_state.rs
crates/sven-tui/src/chat/: markdown.rs  mod.rs  search.rs  segment.rs
crates/sven-tui/src/commands/: completion.rs  mcp.rs  mod.rs  parser.rs  registry.rs  skill.rs
crates/sven-tui/src/nvim/: grid.rs  (+4 more)
(+231 files in other folders)
