[package]
name    = "sven-bootstrap"
version = "1.0.0"
edition = "2021"

[dependencies]
sven-config  = { path = "../sven-config" }
sven-model   = { path = "../sven-model" }
sven-tools   = { path = "../sven-tools" }
sven-core    = { path = "../sven-core" }
sven-runtime = { path = "../sven-runtime" }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { version = "0.7", features = ["compat"] }
tracing      = { workspace = true }
agent-client-protocol = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
tempfile = { workspace = true }
