[package]
name    = "sven-ci"
version = "0.1.0"
edition = "2021"

[dependencies]
sven-config    = { path = "../sven-config" }
sven-model     = { path = "../sven-model" }
sven-tools     = { path = "../sven-tools" }
sven-core      = { path = "../sven-core" }
sven-input     = { path = "../sven-input" }
sven-bootstrap = { path = "../sven-bootstrap" }
sven-runtime   = { path = "../sven-runtime" }
anyhow         = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
futures        = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
sven-input  = { path = "../sven-input" }
