[package]
name    = "sven-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dirs       = { workspace = true }
tracing    = { workspace = true }
clap       = { workspace = true }

[dev-dependencies]
tempfile  = "3"
anyhow    = "1"
thiserror = "1"
