[package]
name    = "sven-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sven-config  = { path = "../sven-config" }
sven-model   = { path = "../sven-model" }
sven-tools   = { path = "../sven-tools" }
sven-runtime = { path = "../sven-runtime" }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
regex       = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
