[package]
name    = "sven-image"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
image     = { workspace = true }
base64    = { workspace = true }
sha2      = { workspace = true }
lru       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
