[package]
name    = "sven-input"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow        = { workspace = true }
pulldown-cmark = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sven-model    = { path = "../sven-model" }
dirs          = { workspace = true }
chrono        = { workspace = true }
