[package]
name    = "sven-integrations"
version = "1.0.0"
edition = "2021"
description = "Email, calendar, and voice integrations for sven agents"

[dependencies]
sven-config  = { path = "../sven-config" }
sven-tools   = { path = "../sven-tools" }

anyhow       = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "multipart"], default-features = false }
chrono       = { workspace = true }
dirs         = { workspace = true }
base64       = { workspace = true }
uuid         = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
