[package]
name        = "sven-mcp-client"
version     = "1.0.0"
edition     = "2021"
description = "MCP client for sven – connects to external MCP servers as a tool/prompt/resource source"
license     = "Apache-2.0"

[dependencies]
sven-config  = { path = "../sven-config" }
sven-tools   = { path = "../sven-tools" }

anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { version = "0.7", features = ["codec"] }
reqwest      = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
dirs         = { workspace = true }
sha2         = { workspace = true }
url          = "2.5"
rand         = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
base64       = "0.22"
