[package]
name        = "sven-mcp"
version     = "1.0.0"
edition     = "2021"
description = "MCP server for sven – exposes sven tools to any MCP client"
license     = "MIT"

[dependencies]
sven-tools           = { path = "../sven-tools" }
anyhow               = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
uuid                 = { workspace = true }
sven-node-client     = { path = "../sven-node-client" }
tokio-tungstenite    = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls               = { workspace = true }
futures-util         = { version = "0.3", default-features = false, features = ["sink", "std"] }
rmcp = { version = "0.15", default-features = false, features = [
    "server",
    "transport-io",
] }

[dev-dependencies]
tokio        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
rmcp = { version = "0.15", default-features = false, features = [
    "server",
    "transport-io",
] }
