[package]
name    = "sven-model"
version = "0.1.0"
edition = "2021"

[dependencies]
sven-config = { path = "../sven-config" }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }
serde_yaml  = { workspace = true }
regex       = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
chrono      = { workspace = true }
