[package]
name    = "sven-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_yaml = { workspace = true }
dirs       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
