[package]
name    = "sven-team"
version = "0.1.0"
edition = "2021"
description = "Agent team coordination: shared task lists, team config, and lifecycle tools"

[dependencies]
sven-tools  = { path = "../sven-tools" }
sven-p2p    = { path = "../sven-p2p" }

libc        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
