[package]
name    = "sven-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
sven-config = { path = "../sven-config" }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
regex       = { workspace = true }
reqwest     = { workspace = true }
html2text   = { workspace = true }
async-recursion = { workspace = true }
dirs        = { workspace = true }
