[package]
name    = "sven-tui"
version = "1.0.0"
edition = "2021"

[dependencies]
sven-config    = { path = "../sven-config" }
sven-model     = { path = "../sven-model" }
sven-input     = { path = "../sven-input" }
sven-tools     = { path = "../sven-tools" }
sven-core      = { path = "../sven-core" }
sven-bootstrap = { path = "../sven-bootstrap" }
sven-mcp-client = { path = "../sven-mcp-client" }
sven-runtime   = { path = "../sven-runtime" }
sven-frontend  = { path = "../sven-frontend" }
anyhow      = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
ratatui     = { workspace = true }
crossterm   = { workspace = true }
unicode-width = { workspace = true }
pulldown-cmark = { workspace = true }
regex       = { workspace = true }
syntect     = { workspace = true }
serde_json  = { workspace = true }
serde       = { workspace = true }
nvim-rs     = { workspace = true }
rmpv        = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
base64      = { workspace = true }
rand        = "0.8"
rustls      = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite       = { version = "0.24", features = ["rustls-tls-native-roots"] }
notify       = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
